import "KeyValuePackageResponse.proto";
import "KeyValuePair.proto";
import "QueryType.proto";
import "DictionaryItem.proto";
import "AggregateFunctionType.proto";

option java_outer_classname="QueryResultSetProtocol";

package Alachisoft.NCache.Common.Protobuf;

message QueryResultSet {
	repeated string searchKeyResults = 1;
	optional KeyValuePackageResponse searchKeyEnteriesResult = 2; 
	optional DictionaryItem aggregateFunctionResult = 3;
	optional QueryType queryType = 4 [default = SEARCH_KEYS];
	optional AggregateFunctionType aggregateFunctionType = 5 [default = NOTAPPLICABLE];
}