import "KeyValuePackageResponse.proto";
import "QueryResultSet.proto";


option java_outer_classname="SearchEntriesResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message SearchEntriesResponse {
	optional KeyValuePackageResponse keyValuePackage = 1;
	optional QueryResultSet queryResultSet = 2;
}